--- a/hive_client/src/views/profile/profile.module.scss
+++ b/hive_client/src/views/profile/profile.module.scss
@@ -2,9 +2,14 @@
 @import '../../assets/variables';
 
 .profileContainer {
-    max-width: 1200px;
     margin: 0 auto;
-    padding: $spacing-lg;
+    padding: $spacing-xxl;
+    background-color: $cream-white;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 
     @media (max-width: 768px) {
       padding: $spacing-md;
