--- a/hive_client/src/views/profile/user.module.scss
+++ b/hive_client/src/views/profile/user.module.scss
@@ -6,7 +6,7 @@
     padding: $spacing-lg;
     box-shadow: $shadow-md;
     margin-bottom: $spacing-lg;
-    width: 1200px;
+    max-width: 1400px;
 
     .header {
         display: flex;
