--- a/hive_client/src/views/auth/auth.module.scss
+++ b/hive_client/src/views/auth/auth.module.scss
@@ -1,23 +1,23 @@
 @import '../../assets/variables';
 
 .authContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   min-height: 100vh;
   padding: $spacing-xl;
   background: linear-gradient(135deg, $cream-white, $honey-light);
 }
-
+a{
+    display: block;
+    margin-top: 5px;
+    color: rgb(9, 10, 124);
+}
 .authCard {
   background-color: white;
   padding: $spacing-xl;
   border-radius: $border-radius-lg;
   box-shadow: $shadow-lg;
-  width: 100%;
-  max-width: 400px;
   position: relative;
+  max-width: 500px;
+  margin: auto;
 
   &::before {
     content: '';
