--- a/hive_client/src/views/profile/beekeeper.module.scss
+++ b/hive_client/src/views/profile/beekeeper.module.scss
@@ -2,7 +2,7 @@
 
 .beekeeperCard {
     background-color: white;
-    width: 1200px;
+    max-width: 1400px;
     border-radius: $border-radius-lg;
     padding: $spacing-lg;
     box-shadow: $shadow-md;
