--- a/hive_client/src/views/reservations/reservationTable.module.scss
+++ b/hive_client/src/views/reservations/reservationTable.module.scss
@@ -29,6 +29,10 @@
     background-color: $honey-light;
     color: $honey-dark;
 }
+.actions{
+    display: flex;
+    gap: 20px;
+}
 
 .reservationTable td {
     color: $wax-brown;
