--- a/hive_client/src/views/auth/auth.module.scss
+++ b/hive_client/src/views/auth/auth.module.scss
@@ -7,8 +7,9 @@
 }
 a{
     display: block;
-    margin-top: 5px;
+    margin-top: 15px;
     color: rgb(9, 10, 124);
+    text-decoration: none;
 }
 .authCard {
   background-color: white;
