--- a/hive_client/src/views/beekeeperService/createService.module.scss
+++ b/hive_client/src/views/beekeeperService/createService.module.scss
@@ -32,6 +32,9 @@
     font-size: $font-size-xl;
     font-weight: bold;
   }
+}.imageContainer{
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 .formGroup {
