--- a/hive_client/src/assets/_variables.scss
+++ b/hive_client/src/assets/_variables.scss
@@ -79,3 +79,26 @@ $transition-slow: 400ms ease-out;
         transform: none;
     }
 }
+
+
+.loading {
+    color: transparent;
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      border: 3px solid rgba(255, 255, 255, 0.3);
+      border-top-color: #fff;
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
+    }
+  }
+
+// Spinner animation
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
