--- a/hive_client/src/assets/_variables.scss
+++ b/hive_client/src/assets/_variables.scss
@@ -88,8 +88,7 @@ $transition-slow: 400ms ease-out;
 
 .loading {
     color: transparent;
-    width: 100%;
-    height: 100%;
+    padding: 20px 25px 20px 25px !important;
     &::after {
       content: '';
       position: absolute;
