--- a/hive_client/src/views/beekeeperService/serviceCard.module.scss
+++ b/hive_client/src/views/beekeeperService/serviceCard.module.scss
@@ -1,6 +1,7 @@
 @import "../../assets/variables";
 
 .serviceCard {
+    cursor: pointer;
     background-color: $cream-white;
     border-radius: $border-radius-lg;
     box-shadow: $shadow-md;
