--- a/hive_client/src/views/beekeeperService/serviceCard.module.scss
+++ b/hive_client/src/views/beekeeperService/serviceCard.module.scss
@@ -66,7 +66,7 @@
 
     .image {
         max-width: 100%;
-        height: auto;
+        height: 300px;
         border-radius: $border-radius-md;
     }
 }
